--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
 <!doctype html>
-<html></html>
+<html>
+	<head>
+		<title>Belajar</title>
+	</head>
+	<body>
+		<p>Hai, apa kabar!</p>
+		<a href=https://www.facebook.com/chusna.rizqati" target="_blank">
+			<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/t1.0-1/c0.0.160.160/p160x160/10359540_775124632511564_1133447706109676178_n.jpg" />
+		</a>
+	</body>
+</html>
