--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Belajar</title>
+		<title>Belajar Bahasa Inggris</title>
 	</head>
 	<body>
+		<h1 style="color: Blue"; text="align-center">Kenapa Kita Harus Belajar Bahasa Inggris?</h1>
 		<p>Hai, apa kabar!</p>
 		<a href="https://www.facebook.com/chusna.rizqati" target="_blank">
 			<img src="https://fbcdn-profile-a.akamaihd.net/hprofile-ak-xap1/t1.0-1/c0.0.160.160/p160x160/10359540_775124632511564_1133447706109676178_n.jpg" />
 		</a>
+		
 	</body>
 </html>
